Add openrouter support
