# apps/server/src/providers/index.ts
@@ -3,3 +3,4 @@ export * from "./create";
 export * from "./detect";
 export * from "./models";
 export * from "./openai";
+export * from "./openrouter";
